--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
 Flask==3.0.3
 requests==2.32.3
-apscheduler==3.10.4
+APScheduler==3.10.4
 gunicorn==22.0.0
+Werkzeug==3.1.3
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+six==1.17.0
+tzlocal==5.3.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
+idna==3.10
+click==8.2.1
+itsdangerous==2.2.0
+packaging==25.0
+pytz==2025.2
